--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -42,4 +42,14 @@
         app:layout_anchorGravity="bottom|right|end"
         app:srcCompat="@android:drawable/ic_input_add"/>
 
+    <Button
+        android:id="@+id/databaseButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test Database"
+        android:layout_marginBottom="39dp"
+        android:layout_alignBottom="@+id/ffab"
+        android:layout_alignEnd="@+id/datetf"
+        android:layout_marginEnd="18dp"/>
+
 </RelativeLayout>
