--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,8 +29,7 @@
             android:background="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:title="@string/my_title">
-        </android.support.v7.widget.Toolbar>
+            app:title="@string/my_title"/>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
