--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -1,4 +1,3 @@
-
 <GridLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -6,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:rowCount="2"
-    android:columnCount="2"
-    tools:context=".Fragments.MyDetailsFragment">
+    android:columnCount="2">
 
     <TableLayout
         android:layout_width="match_parent"
