--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -1,15 +1,59 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".Activities.SettingsActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_height="match_parent"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:text="@string/id"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:layout_scrollFlags="scroll|enterAlways"
+        app:popupTheme="@style/AppTheme.PopupOverlay"
+        app:title="@string/my_title"
+        app:titleTextColor="@android:color/white"/>
+
+    <TableLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+        <TableRow
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent">
+
+            <TextView
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:text="@string/suggestion_interval"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+            <EditText
+                android:id="@+id/suggestion_interval"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent" />
+        </TableRow>
+        <TableRow
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content">
+            <TextView
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:text="@string/reminder_period"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+            <EditText
+                android:id="@+id/reminder_period"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent" />
+        </TableRow>
+    </TableLayout>
+
 
 </LinearLayout>
+
+
+
+
