--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -26,31 +26,36 @@
 
             <TextView
                 android:layout_height="match_parent"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/suggestion_interval"
                 android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
             <EditText
                 android:id="@+id/suggestion_interval"
                 android:layout_height="match_parent"
-                android:layout_width="match_parent" />
+                android:layout_width="wrap_content" />
         </TableRow>
         <TableRow
             android:layout_height="wrap_content"
             android:layout_width="wrap_content">
             <TextView
                 android:layout_height="match_parent"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/reminder_period"
                 android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
             <EditText
                 android:id="@+id/reminder_period"
                 android:layout_height="match_parent"
-                android:layout_width="match_parent" />
+                android:layout_width="wrap_content" />
         </TableRow>
     </TableLayout>
-
+    <Button
+        android:id="@+id/save_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Save"/>
 
 </LinearLayout>
 
