--- a/app/src/main/res/layout/activity_friend_info.xml
+++ b/app/src/main/res/layout/activity_friend_info.xml
@@ -13,6 +13,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:padding="5dip">
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_weight="1"
+                android:text="@string/id"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+
+            <TextView
+                android:id="@+id/friendInfoId"
+                android:layout_weight="1"
+                android:text=""
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+        </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
