--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -47,9 +47,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Test Database"
-        android:layout_marginBottom="39dp"
-        android:layout_alignBottom="@+id/ffab"
-        android:layout_alignEnd="@+id/datetf"
-        android:layout_marginEnd="18dp"/>
+        android:layout_marginBottom="64dp"
+        android:layout_above="@+id/ffab"
+        android:layout_alignEnd="@+id/ffab"/>
 
 </RelativeLayout>
